--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <h2>The message</h2>
     <p>Hey Doug, I'm worried that our friendship is only parasocial, can you acknowledge this message so that it isn't anymore?</p>
 
+    <h2>𝓣𝓱𝓮 𝓶𝓮𝓼𝓼𝓪𝓰𝓮 </h2>
+    <p>𝓗𝓮𝔂 𝓓𝓸𝓾𝓰, 𝓘'𝓶 𝔀𝓸𝓻𝓻𝓲𝓮𝓭 𝓽𝓱𝓪𝓽 𝓸𝓾𝓻 𝓯𝓻𝓲𝓮𝓷𝓭𝓼𝓱𝓲𝓹 𝓲𝓼 𝓸𝓷𝓵𝔂 𝓹𝓪𝓻𝓪𝓼𝓸𝓬𝓲𝓪𝓵, 𝓬𝓪𝓷 𝔂𝓸𝓾 𝓪𝓬𝓴𝓷𝓸𝔀𝓵𝓮𝓭𝓰𝓮 𝓽𝓱𝓲𝓼 𝓶𝓮𝓼𝓼𝓪𝓰𝓮 𝓼𝓸 𝓽𝓱𝓪𝓽 𝓲𝓽 𝓲𝓼𝓷'𝓽 𝓪𝓷𝔂𝓶𝓸𝓻𝓮?</p>
+
     <h2>The funny</h2>
     <p>"Yay Dong, I'm worrisome that our fridenship is only parasocial, can you acknowledge this message so that it isn't anymore?"</p>
  
