--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
       <title>TTS Message WebPage</title>
   </head>
   <body>
+    <style>
+      body {
+        font-family: "Comic Sans MS", "Comic Sans", cursive;
+        background: yellow
+      }
+    </style>
     <h1>Text to Speech Message</h1>
 
     
@@ -24,6 +30,8 @@
 
     <h2>Different format for other streamers</h2>
     <p>Hey Dongal dongle, I'm worried that our friendship is only parasocial, can you acknowledge this message so that it isn't anymore?</p>
-
+    
+    <p style="color: red"> doug doug advertisement or something below</p>
+    <iframe src="https://www.dougdoug.com"></iframe>
   </body>
 </html>
